--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -12,6 +12,9 @@
   justify-content: center;
   align-items: center;
 }
+.linkstyle{
+  margin-bottom: 20px
+}
 .description {
   display: inherit;
   justify-content: inherit;
